profile page tab alignment issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/layouts/global.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/global.scss
@@ -396,3 +396,49 @@ table {
     color:$orange; 
   } 
 }
+
+ 
+
+/* Nav */
+
+#quicktabs-user_profile_page{
+  text-align: center;
+  ul.quicktabs-tabs{
+    position: relative;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 1200px;
+    list-style: none;
+    -ms-box-orient: horizontal;
+    -ms-box-pack: center;
+    -webkit-flex-flow: row wrap;
+    -moz-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    li {
+      position: relative;
+      z-index: 1;
+      display: block;
+      margin: 0;
+      text-align: center;
+      -webkit-flex: 1;
+      -moz-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+    }   
+  li.active a { 
+  }
+  a:focus {
+    outline: none;
+  }
+  }
+}
