--- a/docroot/sites/all/themes/ambitious/sass/layouts/profile.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/profile.scss
@@ -232,8 +232,7 @@ body.profile .top-header{
 			}
 			a{
 				display: block;
-				border-bottom: 6px solid #eef2f3;
-				padding-bottom: 0.6em;
+				border-bottom: 6px solid #eef2f3; 
 				&.active, &:hover{
 					border-color: #f15500;
 				}
